# rpc-playground

./: .gitattributes  .gitmodules  Cargo.toml  README.md  build.rs  docker-compose.yml
client/: main.rs
example/: problem.xml
example/files/: gen.cpp
example/solutions/: main.c.desc
example/statement-sections/korean/: output.tex
example/statements/.html/korean/: problem.html
example/statements/korean/: problem.tex
example/tests/: 01  02  03  04  06  08  09  10
proto/: code.proto
server/: main.rs
shared/: Main  Main.c  Main.java  a.cpp  a.cpp.out  main_solution.cpp  solution
shared/a-plus-b/solutions/: main-cpp.cpp.desc  main-java.java.desc  main-python.py.desc
shared/a-plus-b/statement-sections/korean/: input.tex  legend.tex
shared/a-plus-b/statements/korean/: problem-properties.json
shared/a-plus-b/tests/: 05  07
shared/input/: 0.in  1.in
shared/testlib/: checker  generator  generator.cpp  testlib.h
worker/: Dockerfile  checker.sh  compile.sh  generator.sh  run.sh  run_worker.sh
