[package]
name = "rpc-playground"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
home = "0.5"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "server"
path = "server/main.rs"

[[bin]]
name = "client"
path = "client/main.rs"
